<resources>
    <string name="app_name">60 7AGA</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_yet">Don\'t have Account yet?</string>
    <string name="signup">Signup</string>
    <string name="or">or</string>
    <string name="continue_without_login">Continue without Login</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="select_your_region">Select Your Region</string>
    <string name="select_language_in_arabic">حدد منطقتك</string>
    <string name="english">English</string>
    <string name="submit">Submit</string>
    <string name="arabic">عربى</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="language_and_region_select"><![CDATA[Language & Region Select]]></string>
    <string name="uae">UAE</string>
    <string name="open_drawer" />
    <string name="close_drawer" />
    <string name="rating_">Your reviews and feedbacks are very precious for us. \nKindly give your valuable feedback and let us know your experience.</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="_100_posts">100 Posts</string>
    <string name="my_posts">My Posts</string>
    <string name="my_favorites">My Favorites</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="add_post">Add Post</string>
    <string name="change_category">Change Category</string>
    <string name="edit_post">Edit Post</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="my_profile">My profile</string>
    <string name="product_details">Product Details</string>
    <string name="type">Type</string>
    <string name="price_aed">Price(AED)</string>
    <string name="negotiable">Negotiable</string>
    <string name="non_negotiable">Non Negotiable</string>
    <string name="ad_title">Ad Title</string>
    <string name="description">Description</string>
    <string name="upload_upto_15_photos">Upload Upto 15 Photos</string>
    <string name="post">Post</string>
    <string name="category">Category</string>
    <string name="subcategory">SubCategory</string>
    <string name="sort">Sort</string>
    <string name="date_published">Date Published</string>
    <string name="relevance">Relevance</string>
    <string name="price_lowest">Price:Lowest</string>
    <string name="price_highest">Price:Highest</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="please_Login">To Post You Ad, Kindly Login First</string>
    <string name="to">to</string>
    <string name="_1000">1000</string>
    <string name="location">Location</string>
    <string name="apply">Apply</string>
    <string name="help_text">If You are facing any issue/problem in our services , we are here for you ! We are just one click away</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="username">Username</string>
    <string name="user_email">User Email</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="lorem">Lorem</string>
    <string name="lorem_number">Lorem Number</string>
    <string name="mentioned_price">Mentioned Price</string>
    <string name="enter_your_feedback_here">Enter Your Feedback Here</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="notification_list_not_found">Notification list not found.</string>
    <string name="category_list_not_found">Category list not found</string>
    <string name="good">Good</string>
    <string name="i_agree_to_terms_and_condition">I agree to Terms and Condition.</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="address">Address</string>
    <string name="tags">Ads Tag</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit_update">Submit Update</string>
    <string name="search_here">Search here</string>
    <string name="search_category">Search Category</string>
    <string name="for_account_details">For Account Details</string>
    <string name="notifications">Notifications</string>
    <string name="choose_category">Choose Category</string>
    <string name="some_good">Some Good</string>
    <string name="very_good">Very Good</string>
    <string name="good_job">Good Job</string>
    <string name="awesome">Awesome</string>
    <string name="no_points">No Points</string>
    <string name="update_user_profile">Update User Profile</string>
    <string name="please_check_your_connection">Please Check Your Internet Connection</string>
    <string name="select_phto_gallery">Select photo from gallery</string>
    <string name="select_photo_camera">Capture photo from camera</string>
    <string name="select_action">Select Action</string>
    <string name="please_upload_an_image">Please Upload an Image</string>
    <string name="please_wait">Please wait...</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="select_image">Select Image</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="how_help_you">How we Can Help You</string>
    <string name="whatsapp_not_installed">WhatsApp not Installed</string>
    <string name="share_with">Share with</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="send_mail">Send mail...</string>
    <string name="notification">Notification</string>
    <string name="goods">Good</string>
    <string name="oK">OK</string>
    <string name="no_post_available">No Post Available</string>
    <string name="to_view_your_posts">To View Your Posts</string>
</resources>
