<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.ChangePasswordActivity">

    <include layout="@layout/common_tool_bars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/neosans_pro_regular"
            android:text="@string/old_password"
            android:textColor="@color/text_color"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText

            android:id="@+id/oldpassword_changepassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/hollow_bg"
            android:drawableEnd="@drawable/ic_lock_open_black_24dp"
            android:drawableTint="@color/purple"
            android:fontFamily="@font/neosans_pro_regular"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/neosans_pro_regular"
            android:text="@string/new_password"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText

            android:id="@+id/newpassword_changepassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/hollow_bg"
            android:drawableEnd="@drawable/ic_lock_open_black_24dp"
            android:drawableTint="@color/purple"
            android:fontFamily="@font/neosans_pro_regular"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/neosans_pro_regular"
            android:text="@string/confirm_password"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/confirmpassword_changepassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/hollow_bg"
            android:drawableEnd="@drawable/ic_lock_open_black_24dp"
            android:drawableTint="@color/purple"
            android:fontFamily="@font/neosans_pro_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/changepassword_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/neosans_pro_regular"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />


</LinearLayout>